--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 {{ if not .Site.Params.hideFooter | default false }}
   <footer class="footer">
-    <section class="webring">
+    <section class="webring container">
       <webring-banner>
         <p>Member of <a href="https://retronerds.netlify.app/">Retronerds</a></p>
         <a href="https://retronerds.netlify.app/prev">Previous</a>
