--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -11,7 +11,8 @@
     padding-bottom: 1em;
     webring-banner {
       width: 50%;
-      margin: 0 auto;      
+      margin: 0 auto;     
+      min-width: 360px;
     }
   }
 }
