--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,8 @@
 {{ if not .Site.Params.hideFooter | default false }}
   <footer class="footer">
+    <section class="container">
+      <p>Vuoi fomentare la mia passione per la lettura? Comprami un regalo dalla mia enorme wishlist <a href="https://www.amazon.it/hz/wishlist/ls/E9BMTJJ7ROU6?ref_=wl_share">qui</a></p>
+    </section>
     <section class="webring container">
       <webring-banner>
         <p>Member of <a href="https://retronerds.netlify.app/">Retronerds</a></p>
