Add a link to the Amazon wishlist in the footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 {{ if not .Site.Params.hideFooter | default false }}
   <footer class="footer">
     <section class="container">
-      <p>Vuoi fomentare la mia passione per la lettura? Comprami un regalo dalla mia enorme wishlist <a href="https://www.amazon.it/hz/wishlist/ls/E9BMTJJ7ROU6?ref_=wl_share">qui</a></p>
+      <p>Vuoi fomentare la mia passione per la lettura? Comprami un regalo dalla mia enorme wishlist <a href="https://www.amazon.it/hz/wishlist/ls/E9BMTJJ7ROU6?ref_=wl_share">qui</a>.</p>
     </section>
     <section class="webring container">
       <webring-banner>
